# TDD

Money/main/: Bank.java  Expression.java  Main.java  Money.java  Pair.java  Sum.java
Money/test/: MoneyTest.java
Money_C++/Main/lib/: Bank.h  Expression.h  Money.h  Pair.h  Sum.h
Money_C++/Main/src/: Bank.cpp  CMakeLists.txt  Main.cpp  Money.cpp  Pair.cpp  Sum.cpp
Money_C++/main/: Bank.cpp  Bank.h  Expression.h  Money.cpp  Money.h  Pair.cpp  Pair.h  Sum.cpp  Sum.h  main.cpp
Money_C++/main/lib/: Bank.h  Expression.h  Money.h  Sum.h
Money_C++/main/src/: Bank.cpp  Money.cpp  Pair.cpp  Sum.cpp  main.cpp
Money_C++/test/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  Moneytest.cpp  cmake_install.cmake  money_test  money_test[1]_include.cmake  money_test[1]_tests.cmake
Money_C++2/: CMakeLists.txt  Moneytest.cpp
Money_C++2/Main/: CMakeLists.txt
Money_C++2/Main/inc/: Bank.h  Expression.h  Money.h  Sum.h
Money_C++2/Main/lib/: Bank.h  Dolar.h  Expression.h  Franc.h  Money.h  Sum.h
Money_C++2/Main/src/: Bank.cpp  CMakeLists.txt  Dolar.cpp  Expression.cpp  Franc.cpp  Main.cpp  Money.cpp  Pair.cpp  Sum.cpp
Money_C++2/test/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  Moneytest.cpp  cmake_install.cmake  money_test  money_test[1]_include.cmake  money_test[1]_tests.cmake
